--- a/config.ini
+++ b/config.ini
@@ -1,24 +1,14 @@
 [Basic]
-date_thr = 31
+day_thr = 31
 day_dateNum = 26
 day_interval = 1
+#filename = J:/DataSet/Competition/train_user.csv
+filename = E:/DataSet/Competition/train_user.csv
 
-[UB_CF]
-top_num = 10
-items_thr = 100
+[Markov]
+top_num = 5
+gram_n = 1
 date_flag = d
-description = UserBasedCF.
+num_thr = 100
+description = Markov Model.
 
-[Popular]
-top_num = 10
-items_thr = 100
-date_flag = d
-description = Popular.
-
-[KatzCWT]
-top_num = 10
-items_thr = 100
-date_flag = d
-theta = 0.65
-beta = 0.001
-description = KatzCWT.
