--- a/config.ini
+++ b/config.ini
@@ -2,8 +2,9 @@
 day_thr = 31
 day_dateNum = 26
 day_interval = 1
-#filename = J:/DataSet/Competition/train_user.csv
-filename = E:/DataSet/Competition/train_user.csv
+filename = J:/DataSet/Competition/train_user.csv
+#filename = E:/dataAnalysis/TM-Recommend/recommendation/2014-12-18.csv
+#filename = E:/DataSet/Competition/train_user.csv
 
 [Markov]
 top_num = 5
